--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     </div>
     <div class="grid m-4 md:m-6 lg:m-8 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 2xl:grid-cols-10 border-t border-l">
       <template x-for="(item, index) in filteredIcons" :key="index">
-        <a href="" x-bind:href="document.location.protocol +
-        '//' +
+        <a href="" x-bind:href="
+        '.' +
         document.location.host +
         `/images/icons/` +
         item.icon_path +
@@ -159,8 +159,8 @@
         handleClick(item, downloadType, event, $dispatch) {
           if (downloadType === "copy-svg") {
             event.preventDefault();
-            var url = document.location.protocol +
-              "//" +
+            var url = 
+              "." +
               document.location.host +
               `/images/icons/` +
               item.icon_path +
@@ -178,8 +178,7 @@
           if (downloadType === "copy-cdn") {
             event.preventDefault();
             var url =
-            document.location.protocol +
-              "//" +
+              "." +
               document.location.host +
               `/images/icons/` +
               item.icon_path +
